[project]
name = "dagster-components"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.12.19",
    "geopandas",
    "pandas",
    "sqlalchemy>=2.0.48",
    "types-geopandas>=1.1.3.20260311",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]
