[project]
name = "dagster-components"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1",
    "geopandas>=1",
    "pandas>=2",
    "sqlalchemy>=2",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel<7",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812"]